@@ -520,6 +520,8 @@ L["IsEquipItem"] = "装备"
 L["The slot has item, and the item is an equipment"] = "物品槽中有物品存在，并且该物品是装备物品"
 L["IsStackableItem"] = "可堆叠"
 L["The slot has item, and the item is stackable"] = "物品槽中有物品存在，并且该物品是可堆叠的"
+L["IsUsableItem"] = "可使用"
+L["The slot has item, and the item can be used by right-click."] = "物品槽中有物品存在，并且该物品是被右键使用的"
 L["The slot has item, and the item is poor(color gray)"] = "物品槽中有物品存在，并且该物品是粗糙的(灰色)"
 L["The slot has item, and the item is common(color white)"] = "物品槽中有物品存在，并且该物品是普通的(白色)"
 L["The slot has item, and the item is uncommon(color green)"] = "物品槽中有物品存在，并且该物品是优秀的(绿色)"
