@@ -518,6 +518,8 @@ L["IsEquipItem"] = "裝備"
 L["The slot has item, and the item is an equipment"] = "物品槽中有物品存在，並且該物品是裝備物品"
 L["IsStackableItem"] = "可堆疊"
 L["The slot has item, and the item is stackable"] = "物品槽中有物品存在，並且該物品是可堆疊的"
+L["IsUsableItem"] = "可使用"
+L["The slot has item, and the item can be used by right-click."] = "物品槽中有物品存在，並且該物品是被右鍵使用的"
 L["The slot has item, and the item is poor(color gray)"] = "物品槽中有物品存在，並且該物品是粗糙的(灰色)"
 L["The slot has item, and the item is common(color white)"] = "物品槽中有物品存在，並且該物品是普通的(白色)"
 L["The slot has item, and the item is uncommon(color green)"] = "物品槽中有物品存在，並且該物品是優秀的(綠色)"
